--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "@strapi/plugin-users-permissions": "4.7.0",
     "@strapi/provider-upload-cloudinary": "^4.7.0",
     "@strapi/strapi": "4.7.0",
-    "better-sqlite3": "7.4.6"
+    "better-sqlite3": "7.4.6",
+    "pg": "^8.10.0"
   },
   "author": {
     "name": "A Strapi developer"
